feat: Add GetConfig api
